--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,7 +5,7 @@ html {
 
 body{
   margin: 0 auto;
-  width: 960px;
+  max-width: 960px;
 }
 
 h1, h2, h3, h4 {
@@ -42,7 +42,6 @@ a {
 
 .container {
   display: flex;
-  height: auto;
 }
 
 .feature {
@@ -54,14 +53,6 @@ a {
   width: 100%;
 }
 
-@media only screen and (max-width: 480px){
-  .mobile {
-    display: flex;
-  }
-  .desktop {
-    display:none;
-  }
-}
 /* header */
 
 header {
@@ -99,6 +90,23 @@ nav.desktop {
   margin-right: 1rem;
 }
 
+@media screen and (max-width: 580px){
+  nav.mobile {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
+  header .desktop {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 480px){
+  .desktop  {
+    display:none;
+  }
+}
+
 /* banner */
 
 .banner {
@@ -125,7 +133,26 @@ nav.desktop {
   color: white;
 }
 
+@media screen and (max-width: 640px){
+  .banner {
+    flex-direction: column;
+    padding-top: 0;
+  }
+  .banner .feature {
+    width: 100%;
+    margin-top: 0;
+  }
+  .banner .content {
+    width: 90%;
+    padding: 0 0 2rem 0;
+  }
+  .banner .content p{
+    padding: 2rem 0 1.5rem 0;
+  }
+}
+
 /* information section */
+
 .information {
   padding-top: 1rem;
   background-color: #FFF;
@@ -168,6 +195,52 @@ nav.desktop {
 .text p {
   padding: 0.5rem 0rem;
 }
+
+@media screen and (max-width: 880px){
+  .information {
+    flex-direction: column;
+    align-items: center;
+  }
+  .information .feature {
+    width: 90%;
+    margin: 0;
+  }
+  .items {
+    width: 90%;
+  }
+  .item img {
+    margin-left: 0;
+    width: 15%;
+  }
+}
+
+@media screen and (max-width: 480px){
+  .information .mobile {
+    display: flex;
+    justify-content: center;
+  }
+  .information {
+    padding-top: 0;
+    width: 100%;
+    margin: 0;
+  }
+  .items {
+    width: 100%;
+  }
+  .item {
+    flex-direction: column;
+    padding-bottom: 2rem;
+  }
+  .item img{
+    width: 90%;
+    margin: 16px;
+  }
+  .text {
+    width: 90%;
+    padding: 0 0 0 1rem;
+  }
+}
+
 /* courses section */
 
 .curriculum {
@@ -176,10 +249,7 @@ nav.desktop {
   justify-content: space-around;
   background-color: #7EB0DD;
   width: auto;
-  /* padding-top: 32px; */
-  padding-bottom: 1.5rem;
-  padding-left: 56px;
-  padding-right: 56px;
+  padding: 0 3.5rem 1.5rem 3.5rem;
 }
 
 .curriculum h2, .thesis h2 {
@@ -189,7 +259,6 @@ nav.desktop {
 
 .courses {
   flex-wrap: wrap;
-  /*justify-content: space-around;*/
   flex-direction: row;
   justify-content: center;
   width: auto;
@@ -203,7 +272,6 @@ nav.desktop {
   height: auto;
   margin: 0.5rem 0.5rem;
   box-shadow: 0 4px 6px 1px grey;
-  /* margin: 16px;*/
 }
 
 .course img{
@@ -222,6 +290,28 @@ nav.desktop {
   padding: 0.5rem 0rem;
 }
 
+@media screen and (max-width: 620px){
+  .courses {
+    flex-direction: column;
+    padding: 0;
+    align-items: center;
+  }
+  .course {
+    width: 90%;
+    padding: 0;
+  }
+  .curriculum {
+    padding: 0 0 2rem 0;
+
+  }
+  .course h3 {
+    padding: 1rem 1rem 1.5rem 1rem;
+  }
+  .course:hover {
+    background-color: #5393CC;
+    opacity: 0.85;
+  }
+}
 
 /* thesis exhibit section */
 
@@ -233,6 +323,25 @@ video {
   padding: 1.5rem 0 0.5rem 0;
 }
 
+@media screen and (max-width: 880px){
+  .thesis {
+    flex-direction: column;
+    align-items: center;
+  }
+  .thesis .feature {
+    width: 90%;
+    margin: 0 0 1rem 0;
+  }
+}
+
+@media screen and (max-width: 480px){
+  .thesis .feature {
+    width: 100%;
+    margin: 0;
+    padding: 0 0 1.5rem 0;
+  }
+}
+
 /* footer */
 
 footer {
@@ -240,4 +349,13 @@ footer {
   justify-content: space-between;
   padding: 1rem 0 4rem 1.5rem;
   background-color: #337DBF;
+}
+
+@media screen and (max-width: 580px){
+  footer {
+    padding: 1rem 0 1rem 1.5rem;
+  }
+  footer .desktop {
+    display: none;
+  }
 }
